CSS z-index fix.

--- a/common.css
+++ b/common.css
@@ -7,6 +7,8 @@
 		/* Make rule names as simple as possible. Avoid over-specific names like "#1 #2 .3" unless needed. */
 		/* Avoid using ":is" as it is a little confusing. */
 		/* Do not abuse "!important". */
+	/* About Stacking Context */
+		/* Avoid applying "z-index" when a parent element already has "z-index". */
 
 /* General */
 	/* Basics */
@@ -29,7 +31,7 @@
 			scroll-padding-top: 0;
 		}
 		#Ctnr_BackgroundImage {
-			position: fixed; top: 0; left: 0; z-index: -2;
+			position: fixed; top: 0; left: 0; z-index: -10;
 			width: 100%; height: 100vh;
 			background-color: #808080; background-image: url(images/Background.jpg); background-attachment: fixed; background-position: top center; background-size: cover; background-repeat: no-repeat;
 		}
@@ -151,7 +153,7 @@
 			justify-content: start;
 		}
 		.DropctrlGroup {
-			position: absolute; top: unset; left: unset;
+			position: absolute; top: unset; left: unset; z-index: 71;
 			width: 120px; border: 1px solid #00000080; border-radius: 10px;
 			background-color: #FFFFFFE0;
 			display: flex; flex-wrap: wrap; justify-content: center; align-items: center; overflow: hidden;
@@ -249,7 +251,7 @@
 		}
 			/* Hotkey Indicators */
 			.HotkeyIndicator {
-				position: absolute; bottom: -10px; left: calc(50% - 15px); z-index: 80;
+				position: absolute; bottom: -10px; left: calc(50% - 15px); z-index: 81;
 				width: 30px; height: 20px; border-radius: 5px;
 				background-color: #FFFFFF; box-shadow: 0 0 4px 2px #00000040;
 				font-size: 16px; text-align: center;
@@ -281,7 +283,7 @@
 				z-index: 100;
 			}
 			#Window_Dialog {
-				position: fixed; top: calc(50vh - 95px); left: calc(50% - 190px); z-index: 102;
+				position: fixed; top: calc(50vh - 95px); left: calc(50% - 190px); z-index: 101;
 				width: 380px; height: 190px;
 				display: flex; flex-wrap: wrap;
 			}
@@ -316,7 +318,7 @@
 
 			/* Watermarks */
 			.Watermark {
-				z-index: 110;
+				z-index: 111;
 				color: #00000080; text-shadow: 0 0 5px #FFFFFF; font-weight: bold; text-align: center;
 				display: flex; justify-content: center; align-items: center;
 				pointer-events: none;
@@ -422,6 +424,7 @@
 			height: 0 !important; border: none !important; padding: 0 !important; margin: 0 !important;
 			opacity: 0 !important;
 			overflow: hidden !important;
+			pointer-events: none !important;
 		}
 		.Toast.Hidden, #Window_Dialog.Hidden {
 			top: 50vh;
@@ -430,15 +433,17 @@
 			width: 0 !important; border: none !important; padding: 0 !important; margin: 0 !important;
 			opacity: 0 !important;
 			overflow: hidden !important;
+			pointer-events: none !important;
 		}
 		.HiddenToCorner {
 			width: 0 !important; height: 0 !important; border: none !important; padding: 0 !important; margin: 0 !important;
 			opacity: 0 !important;
 			overflow: hidden !important;
+			pointer-events: none !important;
 		}
 		.Faded, .ForceFaded {
 			opacity: 0 !important;
-			/* pointer-events: none !important; */
+			pointer-events: none !important;
 		}
 	
 	/* Animations */
@@ -534,7 +539,7 @@
 /* Area Specific */
 	/* Header */
 	#Topbar {
-		position: fixed; top: 0; left: 0; z-index: 90;
+		position: fixed; top: 0; left: 0; z-index: 91;
 		width: 100%; height: 60px;
 		background-color: #8040A0E0; backdrop-filter: blur(5px);
 		color: #FFFFFF;
@@ -684,6 +689,7 @@
 			width: 0 !important; border: none !important; padding: 0 !important; margin: 0 !important;
 			opacity: 0 !important;
 			overflow: hidden !important;
+			pointer-events: none !important;
 		}
 }
 /* @media (min-width: 770px) { / Optimization for long fieldsets with heights exceeding 560px. /
